--- a/charts/kubezero/values.yaml
+++ b/charts/kubezero/values.yaml
@@ -22,6 +22,9 @@ cert-manager:
 kiam:
   enabled: false
 
+aws-node-termination-handler:
+  enabled: false
+
 local-volume-provisioner:
   enabled: false
 
