Switch fluent-bit to use kubelet rather than kube-api

--- a/charts/kubezero-logging/charts/fluent-bit/templates/clusterrole.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/templates/clusterrole.yaml
@@ -11,6 +11,8 @@ rules:
     resources:
       - pods
       - namespaces
+      - nodes
+      - nodes/proxy
     verbs:
       - get
       - list
