--- a/charts/kubezero-logging/charts/fluentd/templates/service.yaml
+++ b/charts/kubezero-logging/charts/fluentd/templates/service.yaml
@@ -1,35 +1,28 @@
+
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fluentd.fullname" . }}
+  name: {{ include "fluentd.fullname" . }}
   labels:
-    app: {{ template "fluentd.name" . }}
-    chart: {{ template "fluentd.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "fluentd.labels" . | nindent 4 }}
+  {{- with .Values.service.annotations }}
   annotations:
-{{ toYaml .Values.service.annotations | indent 4 }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 spec:
   type: {{ .Values.service.type }}
-  {{ if (and (eq .Values.service.type "LoadBalancer") (not (empty .Values.service.loadBalancerIP))) }}
-  loadBalancerIP: {{ .Values.service.loadBalancerIP }}
-  {{ end }}
   ports:
+  - port: 24231
+    targetPort: metrics
+    protocol: TCP
+    name: metrics
+  {{- if .Values.service.ports }}
   {{- range $port := .Values.service.ports }}
-    - name: {{ $port.name }}
-      port: {{ $port.containerPort }}
-      targetPort: {{ $port.containerPort }}
-      protocol: {{ $port.protocol }}
+  - name: {{ $port.name }}
+    port: {{ $port.containerPort }}
+    targetPort: {{ $port.containerPort }}
+    protocol: {{ $port.protocol }}
   {{- end }}
-  {{ if (and (eq .Values.service.type "NodePort") (not (empty .Values.service.nodePort))) }}
-      nodePort: {{ .Values.service.nodePort }}
-  {{ end }}
-  {{- if .Values.metrics.enabled }}
-    - name: metrics
-      port: {{ .Values.metrics.service.port }}
-      targetPort: metrics
-      protocol: TCP
   {{- end }}
   selector:
-    app: {{ template "fluentd.name" . }}
-    release: {{ .Release.Name }}
+    {{- include "fluentd.selectorLabels" . | nindent 4 }}
