--- a/charts/kubezero-logging/charts/fluentd/templates/serviceaccount.yaml
+++ b/charts/kubezero-logging/charts/fluentd/templates/serviceaccount.yaml
@@ -4,8 +4,9 @@ kind: ServiceAccount
 metadata:
   name: {{ include "fluentd.serviceAccountName" . }}
   labels:
-    app: {{ template "fluentd.name" . }}
-    chart: {{ template "fluentd.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "fluentd.labels" . | nindent 4 }}
+  {{- with .Values.serviceAccount.annotations }}
+  annotations:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
 {{- end -}}
