--- a/charts/kubezero-logging/charts/fluentd/templates/clusterrole.yaml
+++ b/charts/kubezero-logging/charts/fluentd/templates/clusterrole.yaml
@@ -1,21 +1,26 @@
 {{- if .Values.rbac.create -}}
-kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
   name: {{ include "fluentd.fullname" . }}
   labels:
-    app: {{ template "fluentd.name" . }}
-    chart: {{ template "fluentd.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "fluentd.labels" . | nindent 4 }}
 rules:
-- apiGroups:
-  - ""
-  resources:
-  - "namespaces"
-  - "pods"
-  verbs:
-  - "get"
-  - "watch"
-  - "list"
+  - apiGroups:
+      - ""
+    resources:
+      - pods
+      - namespaces
+    verbs:
+      - get
+      - list
+      - watch
+  - apiGroups:
+      - policy
+    resourceNames:
+      - {{ include "fluentd.fullname" . }}
+    resources:
+      - podsecuritypolicies
+    verbs:
+      - use
 {{- end -}}
