--- a/charts/kubezero-logging/charts/fluentd/templates/clusterrolebinding.yaml
+++ b/charts/kubezero-logging/charts/fluentd/templates/clusterrolebinding.yaml
@@ -1,19 +1,16 @@
 {{- if .Values.rbac.create -}}
-kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
 metadata:
-  name: {{ template "fluentd.fullname" . }}
+  name: {{ include "fluentd.fullname" . }}
   labels:
-    app: {{ template "fluentd.name" . }}
-    chart: {{ template "fluentd.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
-subjects:
-- kind: ServiceAccount
-  name: {{ template "fluentd.fullname" . }}
-  namespace: {{ .Release.Namespace }}
+    {{- include "fluentd.labels" . | nindent 4 }}
 roleRef:
-  kind: ClusterRole
-  name: {{ template "fluentd.fullname" . }}
   apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: {{ include "fluentd.fullname" . }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ include "fluentd.serviceAccountName" . }}
+    namespace: {{ .Release.Namespace }}
 {{- end -}}
