--- a/charts/kubeadm/templates/aws-iam-authenticator/mappings.yaml
+++ b/charts/kubeadm/templates/aws-iam-authenticator/mappings.yaml
@@ -1,5 +1,5 @@
 {{- if eq .Values.platform "aws" }}
-# Controller role which is more or less cluster-admin once enrolled
+# Controller role for consistency, similar to kubeadm admin.conf
 apiVersion: iamauthenticator.k8s.aws/v1alpha1
 kind: IAMIdentityMapping
 metadata:
@@ -11,7 +11,7 @@ spec:
   - system:masters
 
 ---
-# Worker role to eg. delete former self etc.
+# Worker role to eg. delete during terminate
 apiVersion: iamauthenticator.k8s.aws/v1alpha1
 kind: IAMIdentityMapping
 metadata:
