--- a/charts/kubeadm/templates/JoinConfiguration.yaml
+++ b/charts/kubeadm/templates/JoinConfiguration.yaml
@@ -10,6 +10,7 @@ controlPlane:
 nodeRegistration:
   ignorePreflightErrors:
   - DirAvailable--var-lib-etcd
+  - FileAvailable--etc-kubernetes-pki-ca.crt
   - Swap
   kubeletExtraArgs:
     node-labels: {{ .Values.nodeLabels | quote }}
