--- a/charts/kubezero-metrics/charts/kube-prometheus-stack/charts/prometheus-node-exporter/values.yaml
+++ b/charts/kubezero-metrics/charts/kube-prometheus-stack/charts/prometheus-node-exporter/values.yaml
@@ -3,7 +3,7 @@
 # Declare variables to be passed into your templates.
 image:
   repository: quay.io/prometheus/node-exporter
-  tag: v1.0.1
+  tag: v1.1.2
   pullPolicy: IfNotPresent
 
 service:
@@ -80,6 +80,10 @@ endpoints: []
 # Expose the service to the host network
 hostNetwork: true
 
+## If true, node-exporter pods mounts host / at /host/root
+##
+hostRootFsMount: true
+
 ## Assign a group of affinity scheduling rules
 ##
 affinity: {}
@@ -99,6 +103,18 @@ podAnnotations:
 
 # Extra labels to be added to node exporter pods
 podLabels: {}
+
+# Custom DNS configuration to be added to prometheus-node-exporter pods
+dnsConfig: {}
+# nameservers:
+#   - 1.2.3.4
+# searches:
+#   - ns1.svc.cluster-domain.example
+#   - my.dns.search.suffix
+# options:
+#   - name: ndots
+#     value: "2"
+#   - name: edns0
 
 ## Assign a nodeSelector if operating a hybrid cluster
 ##
