--- a/charts/kubezero-metrics/values.yaml
+++ b/charts/kubezero-metrics/values.yaml
@@ -85,6 +85,8 @@ kube-prometheus-stack:
         targetLabel: node
         replacement: $1
         action: replace
+
+  prometheus-node-exporter:
     resources:
       requests:
         cpu: 20m
