--- a/charts/kubezero-aws-efs-csi-driver/Chart.yaml
+++ b/charts/kubezero-aws-efs-csi-driver/Chart.yaml
@@ -21,5 +21,5 @@ dependencies:
     version: ">= 0.1.3"
     repository: https://zero-down-time.github.io/kubezero/
   - name: aws-efs-csi-driver
-    version: 9.99.9
-    repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
+    version: 1.2.1
+    # repository: https://kubernetes-sigs.github.io/aws-efs-csi-driver/
