--- a/charts/kubezero-aws-ebs-csi-driver/charts/aws-ebs-csi-driver/values.yaml
+++ b/charts/kubezero-aws-ebs-csi-driver/charts/aws-ebs-csi-driver/values.yaml
@@ -6,7 +6,7 @@ replicaCount: 2
 
 image:
   repository: k8s.gcr.io/provider-aws/aws-ebs-csi-driver
-  tag: "v0.9.0"
+  tag: "v0.10.0"
   pullPolicy: IfNotPresent
 
 logLevel: 5
@@ -72,7 +72,7 @@ resources:
 
 priorityClassName: ""
 nodeSelector: {}
-tolerateAllTaints: true
+tolerateAllTaints: false
 tolerations: []
 affinity: {}
 
@@ -109,11 +109,15 @@ k8sTagClusterId: ""
 # region: us-east-1
 region: ""
 
+# Additonal environment variables for the controller
+controller:
+  extraVars: {}
+
 node:
   priorityClassName: ""
   nodeSelector: {}
   podAnnotations: {}
-  tolerateAllTaints: true
+  tolerateAllTaints: false
   tolerations: []
   resources: {}
 
