--- a/charts/kubezero-aws-efs-csi-driver/charts/aws-efs-csi-driver/templates/controller-serviceaccount.yaml
+++ b/charts/kubezero-aws-efs-csi-driver/charts/aws-efs-csi-driver/templates/controller-serviceaccount.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.serviceAccount.controller.create -}}
+{{- if .Values.serviceAccount.controller.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -9,6 +9,7 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+{{- end }}
 ---
 
 kind: ClusterRole
@@ -56,4 +57,3 @@ roleRef:
   kind: ClusterRole
   name: efs-csi-external-provisioner-role
   apiGroup: rbac.authorization.k8s.io
-{{- end }}
