--- a/charts/kubezero-logging/charts/fluent-bit/templates/clusterrole.yaml
+++ b/charts/kubezero-logging/charts/fluent-bit/templates/clusterrole.yaml
@@ -11,8 +11,8 @@ rules:
     resources:
       - pods
       - namespaces
-      - nodes
-      - nodes/proxy
+      #- nodes
+      #- nodes/proxy
     verbs:
       - get
       - list
